--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,11 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-success px-3">
             <div class="container">
+                <a class="navbar-brand" asp-page="/Index">
+                    <img src="~/images/DVlog.png" alt="Logo" style="height:30px;" />
+                </a>
+
+            
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
                         <a class="nav-link text-white" asp-page="/Index">Home</a>
