--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,6 +15,11 @@
     <p>Et trygt hjem for alle dyr</p>
 </header>
 
+<!--Billede til forside-->
+<section class="forside-billede">
+    <img src="~/images/forside.jpg" alt="Dyreværnet billede" />
+</section>
+
 <!-- Blog-afsnit -->
 <section class="blog">
     <h2>Om vores arbejde</h2>
