--- a/wwwroot/css/frontpage.css
+++ b/wwwroot/css/frontpage.css
@@ -60,4 +60,23 @@ body {
     color: white;
     padding: 1.5rem;
     text-align: center;
+    margin-top: 3rem; 
 }
+
+.navbar-brand img {
+    margin-right: 1rem;
+}
+.forside-billede {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0;
+}
+
+    .forside-billede img {
+        width: 100%;
+        max-width: 1200px;
+        height: auto;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
